--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
           <workerType>Micro</workerType>
           <workers>1</workers> 
           <uri>https://anypoint.mulesoft.com</uri>; 
-          <applicationName>app-cicd</applicationName> 
+          <applicationName>calc</applicationName> 
         </cloudHubDeployment> 
       </configuration> 
       <executions> 
