--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <cloudHubDeployment> 
           <muleVersion>${app.runtime}</muleVersion> 
           <username>gouse7866</username> 
-          <password>clacture</password> 
+          <password>Gousekgm1</password> 
           <environment>Sandbox</environment> 
           <!-- <region>eu-central-1</region>  -->
           <objectStoreV2>true</objectStoreV2>
